@@ -59,7 +59,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -961,6 +960,7 @@ public class JobThrottlingTest {
         assumeFalse("not testable in automotive device", mAutomotiveDevice);
         assumeFalse("not testable in leanback device", mLeanbackOnly);
         BatteryUtils.assumeBatterySaverFeature();
+        mNetworkingHelper.setAllNetworksEnabled(true);
 
         try (TestNotificationListener.NotificationHelper notificationHelper =
                      new TestNotificationListener.NotificationHelper(
@@ -972,7 +972,7 @@ public class JobThrottlingTest {
                     Map.of(
                             TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true
                     ),
-                    Collections.emptyMap());
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
             notificationHelper.clickNotification();
 
             assertTrue("New user-initiated job failed to start with battery saver ON",
@@ -985,6 +985,7 @@ public class JobThrottlingTest {
         assumeFalse("not testable in automotive device", mAutomotiveDevice);
         assumeFalse("not testable in leanback device", mLeanbackOnly);
         BatteryUtils.assumeBatterySaverFeature();
+        mNetworkingHelper.setAllNetworksEnabled(true);
 
         try (TestNotificationListener.NotificationHelper notificationHelper =
                      new TestNotificationListener.NotificationHelper(
@@ -996,7 +997,7 @@ public class JobThrottlingTest {
                     Map.of(
                             TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true
                     ),
-                    Collections.emptyMap());
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
             notificationHelper.clickNotification();
 
             assertTrue("New user-initiated job failed to start with battery saver ON",
@@ -1011,6 +1012,7 @@ public class JobThrottlingTest {
     @Test
     public void testUserInitiatedJobBypassesDeviceIdle() throws Exception {
         assumeTrue("device idle not enabled", mDeviceIdleEnabled);
+        mNetworkingHelper.setAllNetworksEnabled(true);
 
         try (TestNotificationListener.NotificationHelper notificationHelper =
                      new TestNotificationListener.NotificationHelper(
@@ -1021,7 +1023,7 @@ public class JobThrottlingTest {
                     Map.of(
                             TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true
                     ),
-                    Collections.emptyMap());
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
             notificationHelper.clickNotification();
 
             assertTrue("Job did not start after scheduling",
@@ -1032,6 +1034,7 @@ public class JobThrottlingTest {
     @Test
     public void testUserInitiatedJobBypassesDeviceIdle_toggling() throws Exception {
         assumeTrue("device idle not enabled", mDeviceIdleEnabled);
+        mNetworkingHelper.setAllNetworksEnabled(true);
 
         try (TestNotificationListener.NotificationHelper notificationHelper =
                      new TestNotificationListener.NotificationHelper(
@@ -1042,7 +1045,7 @@ public class JobThrottlingTest {
                     Map.of(
                             TestJobSchedulerReceiver.EXTRA_AS_USER_INITIATED, true
                     ),
-                    Collections.emptyMap());
+                    Map.of(TestJobSchedulerReceiver.EXTRA_REQUIRED_NETWORK_TYPE, NETWORK_TYPE_ANY));
             notificationHelper.clickNotification();
 
             assertTrue("Job did not start after scheduling",
@@ -1055,10 +1058,9 @@ public class JobThrottlingTest {
     }
 
     @Test
-    public void testRestrictingStopReason_RestrictedBucket() throws Exception {
+    public void testRestrictingStopReason_RestrictedBucket_connectivity() throws Exception {
         assumeTrue("app standby not enabled", mAppStandbyEnabled);
-        assumeFalse("not testable in automotive device", mAutomotiveDevice);
-        assumeFalse("not testable in leanback device", mLeanbackOnly);
+        // Tests cannot disable ethernet network.
         assumeFalse("not testable, since ethernet is connected", hasEthernetConnection());
 
         assumeTrue(mNetworkingHelper.hasWifiFeature());
@@ -1082,8 +1084,6 @@ public class JobThrottlingTest {
         setScreenState(false);
         triggerJobIdle();
 
-        // Toggle individual constraints
-
         // Connectivity
         mTestAppInterface.scheduleJob(false, NETWORK_TYPE_ANY, false);
         runJob();
@@ -1094,7 +1094,32 @@ public class JobThrottlingTest {
                 mTestAppInterface.awaitJobStop(DEFAULT_WAIT_TIMEOUT));
         assertEquals(JobParameters.STOP_REASON_CONSTRAINT_CONNECTIVITY,
                 mTestAppInterface.getLastParams().getStopReason());
+    }
+
+    @Test
+    public void testRestrictingStopReason_RestrictedBucket_idle() throws Exception {
+        assumeTrue("app standby not enabled", mAppStandbyEnabled);
+
+        assumeTrue(mNetworkingHelper.hasWifiFeature());
+        mNetworkingHelper.ensureSavedWifiNetwork();
+
+        // This test is designed for the old quota system.
+        mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
+
+        setRestrictedBucketEnabled(true);
+        setTestPackageStandbyBucket(Bucket.RESTRICTED);
+
+        // Disable coalescing and the parole session
+        mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
+        mDeviceConfigStateHelper.set("qc_max_session_count_restricted", "0");
+
+        // Satisfy all additional constraints.
         mNetworkingHelper.setAllNetworksEnabled(true);
+        mNetworkingHelper.setWifiMeteredState(false);
+        setChargingState(true);
+        BatteryUtils.runDumpsysBatterySetLevel(100);
+        setScreenState(false);
+        triggerJobIdle();
 
         // Idle
         mTestAppInterface.scheduleJob(false, NETWORK_TYPE_ANY, false);
@@ -1106,6 +1131,34 @@ public class JobThrottlingTest {
                 mTestAppInterface.awaitJobStop(DEFAULT_WAIT_TIMEOUT));
         assertEquals(JobParameters.STOP_REASON_APP_STANDBY,
                 mTestAppInterface.getLastParams().getStopReason());
+    }
+
+    @Test
+    public void testRestrictingStopReason_RestrictedBucket_charging() throws Exception {
+        assumeTrue("app standby not enabled", mAppStandbyEnabled);
+        // Can't toggle charging state on automotive devices.
+        assumeFalse("not testable on automotive device", mAutomotiveDevice);
+        // Can't toggle charging state on leanback devices.
+        assumeFalse("not testable on leanback device", mLeanbackOnly);
+
+        assumeTrue(mNetworkingHelper.hasWifiFeature());
+        mNetworkingHelper.ensureSavedWifiNetwork();
+
+        // This test is designed for the old quota system.
+        mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
+
+        setRestrictedBucketEnabled(true);
+        setTestPackageStandbyBucket(Bucket.RESTRICTED);
+
+        // Disable coalescing and the parole session
+        mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
+        mDeviceConfigStateHelper.set("qc_max_session_count_restricted", "0");
+
+        // Satisfy all additional constraints.
+        mNetworkingHelper.setAllNetworksEnabled(true);
+        mNetworkingHelper.setWifiMeteredState(false);
+        setChargingState(true);
+        BatteryUtils.runDumpsysBatterySetLevel(100);
         setScreenState(false);
         triggerJobIdle();
 
@@ -1119,8 +1172,36 @@ public class JobThrottlingTest {
                 mTestAppInterface.awaitJobStop(DEFAULT_WAIT_TIMEOUT));
         assertEquals(JobParameters.STOP_REASON_APP_STANDBY,
                 mTestAppInterface.getLastParams().getStopReason());
+    }
+
+    @Test
+    public void testRestrictingStopReason_RestrictedBucket_batteryNotLow() throws Exception {
+        assumeTrue("app standby not enabled", mAppStandbyEnabled);
+        // Automotive devices typically don't have batteries.
+        assumeFalse("not testable on automotive device", mAutomotiveDevice);
+        // Leanback devices typically don't have batteries.
+        assumeFalse("not testable on leanback device", mLeanbackOnly);
+
+        assumeTrue(mNetworkingHelper.hasWifiFeature());
+        mNetworkingHelper.ensureSavedWifiNetwork();
+
+        // This test is designed for the old quota system.
+        mTareDeviceConfigStateHelper.set("enable_tare_mode", "0");
+
+        setRestrictedBucketEnabled(true);
+        setTestPackageStandbyBucket(Bucket.RESTRICTED);
+
+        // Disable coalescing and the parole session
+        mDeviceConfigStateHelper.set("qc_timing_session_coalescing_duration_ms", "0");
+        mDeviceConfigStateHelper.set("qc_max_session_count_restricted", "0");
+
+        // Satisfy all additional constraints.
+        mNetworkingHelper.setAllNetworksEnabled(true);
+        mNetworkingHelper.setWifiMeteredState(false);
         setChargingState(true);
         BatteryUtils.runDumpsysBatterySetLevel(100);
+        setScreenState(false);
+        triggerJobIdle();
 
         // Battery not low
         setScreenState(false);
